[tool.poetry]
name = "sp110e-hass"
version = "0.1.0"
description = ""
authors = ["Pavel Roslovets <p.v.roslovets@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.dev-dependencies]
homeassistant = "^2021.11.0"
sp110e = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
