[tool.poetry]
name = "sp110e-hass"
version = "1.0.2"
description = "Control SP110E RGB LED BLE Controller from Home Assistant"
authors = ["Pavel Roslovets <p.v.roslovets@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/roslovets/SP110E-HASS"
repository = "https://github.com/roslovets/SP110E-HASS"
keywords = ["SP110E", "RGB", "LED", "HASS", "Home Assistant"]
classifiers =[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
    ]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.dev-dependencies]
homeassistant = ">=2021.11.0"
sp110e = ">=1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
remove_dist = "false"
branch = "main"
version_toml = "pyproject.toml:tool.poetry.version"
version_pattern = 'custom_components/sp110e/manifest.json:\"version\": "(\d+\.\d+\.\d+)"'
upload_to_release = false
upload_to_pypi = false
build_command = false